Revert "Fixed content showing behind sticky header"
This reverts commit 33c0596858709d7ae5c32e49343affd0fe83d72a.

--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -4,7 +4,7 @@
 .searchbar {
   display: flex;
   position: sticky;
-  top: -2px; // Makes sure no content is shown behind stick header
+  top: 0;
   height: max-content;
   gap: $space-smd;
 
